--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	],
 	"require": {
 		"league/commonmark": "^2.3",
-		"php": "^8.1",
+		"php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
 		"bamarni/composer-bin-plugin": "^1.8"
 	},
 	"scripts": {
@@ -20,6 +20,9 @@
 		"cs:check": "php-cs-fixer fix --dry-run --diff",
 		"cs:fix": "php-cs-fixer fix",
 		"psalm": "psalm.phar --no-cache",
+		"psalm:fix": "psalm.phar --no-cache --alter --issues=MissingReturnType,ClassMustBeFinal --dry-run",
+		"psalm:update-baseline": "psalm.phar --threads=1 --update-baseline",
+		"psalm:update-baseline:force": "psalm.phar --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
 		"test:unit": "phpunit -c tests/phpunit.xml --no-coverage",
 		"post-install-cmd": [
 			"@composer bin all install --ansi",
@@ -42,7 +45,10 @@
 	},
 	"require-dev": {
 		"ext-mbstring": "*",
-		"nextcloud/ocp": "dev-master"
+		"nextcloud/ocp": "dev-master",
+		"nextcloud/coding-standard": "^1.1",
+		"phpunit/phpunit": "^10",
+		"psalm/phar": "^6.8"
 	},
 	"extra": {
 		"bamarni-bin": {
