--- a/.nextcloudignore
+++ b/.nextcloudignore
@@ -5,7 +5,7 @@
 .vscode
 .php-cs-fixer.*
 /.codecov.yml
-/.eslintrc.js
+/.eslintrc.cjs
 /.gitattributes
 /.gitignore
 /.l10nignore
@@ -31,7 +31,7 @@
 /psalm.xml
 /pyproject.toml
 /renovate.json
-/stylelint.config.js
+/stylelint.config.cjs
 /webpack.config.js
 /webpack.js
 tests
